--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,6 +24,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'NA'
 - !lcsh 'Architecture -- Periodicals'
+- GITenberg
 title: "The Brochure Series of Architectural Illustration, Vol. 01, No. 06, June 1895\r\
   \nRenaissance Panels from Perugia"
 url: http://www.gutenberg.org/ebooks/19444
